--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.4.2",
     "react-graceful-image": "^1.2.9",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "1.1.4",
     "react-select": "^2.0.0",
     "react-syntax-highlighter": "^8.0.1",
